# wallpad-mqtt-bridge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  config.json  config.yaml  main.py  makeconf.sh  pyproject.toml  repository.yaml  ruff.toml  run.sh  test_trigger.py
.claude/agents/: explorer.md  verifier.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md  refactor.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  gemini-code-review.yml
docs/: architecture.md  development.md  hardware_connection.md  how-to-build.md  packet_analysis.md  sequences.md
docs/.tmp/: mqtt_hex_packet_flow.md  protocol_refactoring.md
docs/adr/: README.md  template.md
docs/legacy/: CHANGELOG.md  README.md
kocom-wallpad/: Dockerfile  rs485.py
scripts/: build.sh  check-commit-title.sh  deploy.sh  options.example.json  token_report.py
src/kocom/: config.py  constants.py  core.py  grex.py  kocom.py  main.py  rs485.py
src/kocom/devices/: __init__.py  base.py  elevator.py  fan.py  gas.py  grex.py  grex_packet_builder.py  kocom_packet_builder.py  light.py  packet_builder.py  plug.py  thermostat.py
src/wallpad/: __init__.py  bridge.py  config.py  main.py  mqtt.py  rs485.py  state.py  version.py
src/wallpad/devices/: __init__.py  base.py  topic.py
src/wallpad/grex/: __init__.py  grex.py
src/wallpad/ha/: __init__.py  discovery.py
src/wallpad/kocom/: __init__.py  kocom.py  state.py
src/wallpad/mqtt/: __init__.py  client.py  config.py  constants.py
src/wallpad/panel/: __init__.py  factory.py  panel.py  state.py  synchronizer.py  topic.py
src/wallpad/protocol/: base.py
src/wallpad/rs485/: __init__.py  rs485.py  serial.py  socket.py
src/wallpad/transport/: __init__.py  base.py  bus_arbitration.py  factory.py  reconnect.py  rs485.py  serial.py  socket.py
tests/kocom/: conftest.py  test_config.py  test_formatting.py  test_grex_config_injection.py  test_grex_discovery.py  test_grex_make_packet.py  test_ha_discovery.py  test_kocom_config_injection.py  test_kocom_flows.py  test_kocom_make_packet.py  test_kocom_scan.py  test_make_packet.py  test_rs485_legacy.py
tests/wallpad/: conftest.py  test_bridge.py  test_config.py  test_formatting.py  test_grex_config_injection.py  test_grex_discovery.py  test_grex_make_packet.py  test_ha_discovery.py  test_kocom_config_injection.py  test_kocom_flows.py  test_kocom_make_packet.py  test_kocom_publish.py  test_kocom_scan.py  test_mqtt_client.py  test_panel_make_packet.py  test_panel_publish.py  test_room_config.py  test_rs485_legacy.py  test_transport_factory.py
translations/: en.yaml  ko.yaml
(+152 files in other folders)
