[project]
name = "wallpad-mqtt-bridge"
version = "0.1.0"
description = "RS485 wallpad and ventilator MQTT gateway for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "cz-conventional-gitmoji>=0.7.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "syrupy>=5.3.2",
]

[tool.commitizen]
name = "cz_gitmoji"  # gitmoji 프리셋 사용
version = "0.1.0"
tag_format = "v$version"

[tool.pytest.ini_options]
pythonpath = ["src"]
