[project]
name = "wallpad-mqtt-bridge"
version = "0.1.0"
description = "RS485 wallpad and ventilator MQTT gateway for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pyserial>=3.5",
    "pyserial-asyncio-fast>=0.16",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "commitizen>=4.16.3",
    "cz-conventional-gitmoji>=0.7.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
    "syrupy>=5.3.2",
]

[tool.commitizen]
name = "cz_gitmoji"
version_provider = "pep621"
tag_format = "v$version"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.pyright]
typeCheckingMode = "basic"
include = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
reportMissingTypeStubs = false

# src를 strict로 올릴 때를 대비한 tests 오버라이드 틀(지금은 휴면).
# 이 블록은 strict 전용 노이즈(픽스처 미타입·private 접근 등)만 끈다.
# tests는 아직 include에 넣지 않았다: 테스트 코드에 reportOptionalMemberAccess
# (None 접근) 등 basic 위반이 남아 있어, 그걸 정리한 뒤 include에 "tests"를
# 추가하면 된다. 그때는 이 오버라이드가 strict 소음만 걸러 주므로 재작업이 없다.
# (pyright가 executionEnvironments 안의 typeCheckingMode를 아직 미지원:
#  microsoft/pyright#8263, basedpyright#1639 대기 — 그래서 룰을 개별로 지정)
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportMissingTypeArgument = "none"
reportUntypedFunctionDecorator = "none"
reportUnusedFunction = "none"

[tool.bandit]
exclude_dirs = ["tests"]
